fixed formatting fixed styling some subpages fixed image getting way to stretched

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,9 +105,11 @@ body {
 }
 
 .pageLayout>img {
+  max-height: 50vw;
   height: 100%;
   width: 100%;
   object-fit: cover;
+  /* object-position: center; */
   overflow: hidden;
 }
 
